<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsActivity" >

    <TextView
        android:id="@+id/stats_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_string"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.89"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_tv"
        app:layout_constraintVertical_bias="0.1"
        android:padding="5dp">

        <TextView
            android:id="@+id/battery_level_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/battery_level_string" />

        <TextView
            android:id="@+id/battery_level_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/battery_temp_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/battery_temp_string" />

        <TextView
            android:id="@+id/battery_temp_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/null_string" />

        <TextView
            android:id="@+id/battery_volt_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/battery_volt_string" />

        <TextView
            android:id="@+id/battery_volt_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/null_string" />

        <TextView
            android:id="@+id/battery_consumption_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/battery_consumption_string" />

        <TextView
            android:id="@+id/battery_consumption_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/downlink_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/downlink_info_string" />

        <TextView
            android:id="@+id/downlink_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/null_string" />

        <TextView
            android:id="@+id/uplink_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/uplink_info_string" />

        <TextView
            android:id="@+id/uplink_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/null_string" />

    </GridLayout>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_string"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stats_tv"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.85" />

</android.support.constraint.ConstraintLayout>